--- a/views/register.ejs
+++ b/views/register.ejs
@@ -129,6 +129,9 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required />
 
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+
       
       <h3>Select Screens:</h3>
 
